finish query & delete notifications api
